docs-archive/apache-airflow-providers-google/12.0.0/_sources/_api/tests/system/google/cloud/translate/example_translate_model/index.rst.txt
:py:mod:`tests.system.google.cloud.translate.example_translate_model`
=====================================================================

.. py:module:: tests.system.google.cloud.translate.example_translate_model

.. autoapi-nested-parse::

   Example Airflow DAG that translates text in Google Cloud Translate using V3 API version
   service in the Google Cloud.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'gcp_translate_automl_native_model'

   

.. py:data:: PROJECT_ID

   

.. py:data:: ENV_ID

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME

   

.. py:data:: DATA_FILE_NAME
   :value: 'import_en-es_short.tsv'

   

.. py:data:: RESOURCE_PATH

   

.. py:data:: COPY_DATA_PATH

   

.. py:data:: DST_PATH

   

.. py:data:: DATASET_DATA_PATH

   

.. py:data:: DATASET

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

