docs-archive/apache-airflow-providers-google/14.0.0/_sources/_api/tests/system/google/cloud/translate/example_translate_model/index.rst.txt
tests.system.google.cloud.translate.example_translate_model
===========================================================

.. py:module:: tests.system.google.cloud.translate.example_translate_model

.. autoapi-nested-parse::

   Example Airflow DAG that translates text in Google Cloud Translate using V3 API version
   service in the Google Cloud.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.translate.example_translate_model.DAG_ID
   tests.system.google.cloud.translate.example_translate_model.PROJECT_ID
   tests.system.google.cloud.translate.example_translate_model.ENV_ID
   tests.system.google.cloud.translate.example_translate_model.REGION
   tests.system.google.cloud.translate.example_translate_model.RESOURCE_DATA_BUCKET
   tests.system.google.cloud.translate.example_translate_model.DATA_SAMPLE_GCS_BUCKET_NAME
   tests.system.google.cloud.translate.example_translate_model.DATA_FILE_NAME
   tests.system.google.cloud.translate.example_translate_model.RESOURCE_PATH
   tests.system.google.cloud.translate.example_translate_model.COPY_DATA_PATH
   tests.system.google.cloud.translate.example_translate_model.DST_PATH
   tests.system.google.cloud.translate.example_translate_model.DATASET_DATA_PATH
   tests.system.google.cloud.translate.example_translate_model.DATASET
   tests.system.google.cloud.translate.example_translate_model.create_bucket
   tests.system.google.cloud.translate.example_translate_model.test_run


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'gcp_translate_automl_native_model'


.. py:data:: PROJECT_ID

.. py:data:: ENV_ID

.. py:data:: REGION
   :value: 'us-central1'


.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'


.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME
   :value: ''


.. py:data:: DATA_FILE_NAME
   :value: 'import_en-es_short.tsv'


.. py:data:: RESOURCE_PATH
   :value: 'V3_translate/create_ds/import_data/import_en-es_short.tsv'


.. py:data:: COPY_DATA_PATH
   :value: 'gs://airflow-system-tests-resources/V3_translate/create_ds/import_data/import_en-es_short.tsv'


.. py:data:: DST_PATH
   :value: 'translate/import/import_en-es_short.tsv'


.. py:data:: DATASET_DATA_PATH
   :value: 'gs:///translate/import/import_en-es_short.tsv'


.. py:data:: DATASET

.. py:data:: create_bucket

.. py:data:: test_run

